# pfc-1

./: .gitignore  Algorithm.h  Algorithm.hpp  CMakeLists.txt  Dantzig.h  Dantzig.hpp  DantzigV2.h  Graph.h  Makefile  Proposal.h  README.md  Spira.h  Testing.h  Testing.hpp  main.cpp  out  run.sh  testing.sh
Algorithms/: Algorithm.hpp  Dantzig.hpp  MoffatAndTakaoka.hpp  Spira.hpp
Classes/: Edge.h  Edge.hpp  Global.h  Global.hpp  Graph.h  Graph.hpp  Vertex.h  Vertex.hpp
Graphs/: graph.txt
Results/: Parser.ipynb  Parser2.ipynb  dantzigResults.txt  moffatAndTakaokaResults.txt  moffatResults.txt  moffatWithBoostResults.txt  spiraResults.txt
Tests/: DantzigTests.cpp  DantzigTests.sh  GenerateGraphs.cpp  GraphTests.cpp  Makefile  MoffatAndTakaokaTests.sh  SpiraTests.sh  Tester.hpp  Testing.hpp  Tests.cpp  UnitTest.hpp  Util.h  Util.hpp  dantzig.sh  out  peekaboo_mpi_omp.c
Tests/Parallel/: DantzigTestsParallel.cpp  Makefile  TestsParallel.cpp  dantzig.sh  moffat.sh  moffatWithBoost.sh
